name: hed
author: Anders Conbere <aconbere@conbere.org>
license: OtherLicense
license-file: LICENSE
version: 0.1
homepage: http://github.com/aconbere/hed
synopsis: a SIMPLE text editor
description: Hed is an extremely simple text editor, meant to be expiremented with, played with, and broken.
build-type: Simple
cabal-version: >= 1.2

library
    exposed-modules:    Hed
                        Hed.Main
                        Hed.Buffer
                        Hed.VTY
    build-depends:
        base,
        vty >= 4.0.0.1,
        QuickCheck >= 2.0.0.0,
        test-framework >= 0.2.4,
        test-framework-quickcheck2 >= 0.2.4 

    ghc-options: -Wall
    ghc-prof-options:   -prof -auto-all

executable hed
    main-is:            Main.hs
    other-modules:      Hed
                        Hed.Main
                        Hed.Buffer
                        Hed.VTY

    ghc-options:        -funbox-strict-fields -Wall
    ghc-prof-options:   -prof -auto-all

executable hed-test
    main-is: Hed/Test.hs
    ghc-options: -main-is Hed.Test

